--- a/Lab1/inf2610-lab1-2.1/banque/Makefile
+++ b/Lab1/inf2610-lab1-2.1/banque/Makefile
@@ -163,19 +163,19 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/missing aclocal-1.14
+ACLOCAL = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/missing aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
-AUTOCONF = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/missing autoconf
-AUTOHEADER = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/missing autoheader
-AUTOMAKE = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/missing automake-1.14
+AUTOCONF = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/missing autoconf
+AUTOHEADER = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/missing autoheader
+AUTOMAKE = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/missing automake-1.14
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -Wall -g -O0 -fno-inline
 CPP = gcc -E
-CPPFLAGS =  -I/usr/include
+CPPFLAGS =  
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
@@ -192,7 +192,7 @@ ECHO_T =
 EGREP = /usr/bin/grep -E
 EXEEXT = 
 FGREP = /usr/bin/grep -F
-GLIB_CFLAGS = -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
+GLIB_CFLAGS = -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include
 GLIB_LIBS = -lglib-2.0
 GREP = /usr/bin/grep
 INSTALL = /usr/bin/install -c
@@ -201,14 +201,14 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LD = /usr/bin/ld -m elf_x86_64
-LDFLAGS =  -L/usr/lib
+LDFLAGS =  
 LIBOBJS = 
 LIBS = -lpthread  -lpth -ldl -lnsl
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/missing makeinfo
+MAKEINFO = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /usr/bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -227,10 +227,10 @@ PACKAGE_VERSION = 2.1
 PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 PKG_CONFIG_LIBDIR = 
-PKG_CONFIG_PATH = 
-PTH_CFLAGS = -I/usr/include
-PTH_CPPFLAGS = -I/usr/include
-PTH_LDFLAGS = -L/usr/lib
+PKG_CONFIG_PATH = /usr/lib64/mpich/lib/pkgconfig
+PTH_CFLAGS = 
+PTH_CPPFLAGS = 
+PTH_LDFLAGS = 
 PTH_LIBS = -lpth -ldl -lnsl
 RANLIB = ranlib
 SED = /usr/bin/sed
@@ -238,10 +238,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 2.1
-abs_builddir = /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/banque
-abs_srcdir = /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/banque
-abs_top_builddir = /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1
-abs_top_srcdir = /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1
+abs_builddir = /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/banque
+abs_srcdir = /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/banque
+abs_top_builddir = /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1
+abs_top_srcdir = /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -271,7 +271,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/nephe/Documents/PolyMtl/TP/INF2610/lab1/inf2610-lab1-2.1/install-sh
+install_sh = ${SHELL} /usagers/innav/Documents/INF2610/INF2610/Lab1/inf2610-lab1-2.1/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
