--- a/Lab2/inf2610-lab2-1.4/tests/Makefile
+++ b/Lab2/inf2610-lab2-1.4/tests/Makefile
@@ -327,13 +327,13 @@ TEST_LOG_COMPILE = $(TEST_LOG_COMPILER) $(AM_TEST_LOG_FLAGS) \
 	$(TEST_LOG_FLAGS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/test-driver
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} "/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/missing" aclocal-1.15
+ACLOCAL = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
-AUTOCONF = ${SHELL} "/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/missing" autoconf
-AUTOHEADER = ${SHELL} "/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/missing" autoheader
-AUTOMAKE = ${SHELL} "/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/missing" automake-1.15
+AUTOCONF = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/missing autoconf
+AUTOHEADER = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/missing autoheader
+AUTOMAKE = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/missing automake-1.15
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -373,7 +373,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 LT_SYS_LIBRARY_PATH = 
-MAKEINFO = ${SHELL} "/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/missing" makeinfo
+MAKEINFO = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NAFLAGS = -felf64 -DELF -D__x86_64__
@@ -401,10 +401,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = strip
 VERSION = 1.4
-abs_builddir = /home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/tests
-abs_srcdir = /home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/tests
-abs_top_builddir = /home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4
-abs_top_srcdir = /home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4
+abs_builddir = /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/tests
+abs_srcdir = /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/tests
+abs_top_builddir = /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4
+abs_top_srcdir = /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -434,7 +434,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} '/home/inavarro/Desktop/Septimo Semestre/INF2610_Noyau Systeme Exploitation/INF2610/Lab2/inf2610-lab2-1.4/install-sh'
+install_sh = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab2/inf2610-lab2-1.4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
