--- a/Lab3/inf2610-lab4-2.5/scripts/Makefile
+++ b/Lab3/inf2610-lab4-2.5/scripts/Makefile
@@ -122,14 +122,14 @@ am__can_run_installinfo = \
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/missing aclocal-1.15
+ACLOCAL = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
-AUTOCONF = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/missing autoconf
-AUTOHEADER = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/missing autoheader
-AUTOMAKE = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/missing automake-1.15
-AWK = mawk
+AUTOCONF = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/missing autoconf
+AUTOHEADER = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/missing autoheader
+AUTOMAKE = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/missing automake-1.15
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -Wall -O3 -fomit-frame-pointer
@@ -148,10 +148,10 @@ DUMPBIN =
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /bin/grep -E
+EGREP = /usr/bin/grep -E
 EXEEXT = 
-FGREP = /bin/grep -F
-GREP = /bin/grep
+FGREP = /usr/bin/grep -F
+GREP = /usr/bin/grep
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -165,9 +165,9 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/missing makeinfo
+MAKEINFO = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/missing makeinfo
 MANIFEST_TOOL = :
-MKDIR_P = /bin/mkdir -p
+MKDIR_P = /usr/bin/mkdir -p
 NAFLAGS = -felf64 -DELF -D__x86_64__
 NASM = nasm
 NM = /usr/bin/nm -B
@@ -185,15 +185,15 @@ PACKAGE_URL =
 PACKAGE_VERSION = 2.5
 PATH_SEPARATOR = :
 RANLIB = ranlib
-SED = /bin/sed
+SED = /usr/bin/sed
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = strip
 VERSION = 2.5
-abs_builddir = /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/scripts
-abs_srcdir = /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/scripts
-abs_top_builddir = /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5
-abs_top_srcdir = /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5
+abs_builddir = /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/scripts
+abs_srcdir = /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/scripts
+abs_top_builddir = /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5
+abs_top_srcdir = /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -223,7 +223,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/aymen/Desktop/INF2610/INF2610/Lab3/inf2610-lab4-2.5/install-sh
+install_sh = ${SHELL} /usagers/innav/Documents/INF2610/Lab3/inf2610-lab4-2.5/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -235,7 +235,6 @@ pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
-runstatedir = ${localstatedir}/run
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 srcdir = .
